<resources>
    <string name="app_name">Wonder Finder</string>
    <string name="wonder_finder">Wonder Finder</string>
    <string name="register">New User? <b>Register here.</b></string>
    <string name="loginHere">Already have an account? <b>Login here.</b></string>
    <string name="applogo">appLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="descregisterback">DescRegisterBack</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerbutton">Register</string>
    <string name="done">Done</string>

    <string name="API_KEY">AIzaSyCmePmp4dyWes1OxKZv2K8n5hcO8Cx9kR0</string>
    <string name="home">Home</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_username">Test Username</string>
    <string name="testemail_gmail_com">TestEmail@gmail.com</string>
    <string name="verify_email">Verify Email</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="search_for_landmark">Search for landmark</string>
    <string name="defaul">Default</string>
    <string name="satellite">Satellite</string>
    <string name="ter">Terrain</string>
    <string name="to">To</string>
    <string name="from">From</string>
</resources>