<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbarReg"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/shape_regbar">

        <ImageButton
            android:id="@+id/btnForgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descregisterback"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/applogo" />

        <TextView
            android:id="@+id/txtWonderFinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:text="@string/wonder_finder"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/actvForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/ic_email_gray"
            android:drawablePadding="18dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey2"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/backgroundGreen"
        app:cardCornerRadius="25dp"
        android:layout_below="@id/tilEmail"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/forgotPassProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>