<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/toolbarReg"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/shape_regbar">

        <ImageButton
            android:id="@+id/btnRegBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descregisterback"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/applogo" />

        <TextView
            android:id="@+id/txtWonderFinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:text="@string/wonder_finder"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>
    
    <ScrollView
        android:id="@+id/svReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="215dp">

        <RelativeLayout
            android:id="@+id/rlLogEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:src="@drawable/ic_camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_below="@+id/imgProfile">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/username"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_below="@id/tilUsername"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/actvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/tilEmail"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/tilPassword"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/backgroundGreen"
                app:cardCornerRadius="25dp"
                android:layout_below="@id/tilConfirmPassword"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/txtRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerbutton"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:textSize="20sp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/loginHere"
                android:textColor="@color/black"
                android:layout_below="@+id/btnRegister"
                android:textSize="15sp"
                android:layout_marginTop="20dp"/>

            <ProgressBar
                android:id="@+id/registerProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>